--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
 	},
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^6.0.0",
+		"axios": "^0.26.1",
+		"daisyui": "^2.6.3",
 		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"react-dom": "^17.0.2",
+		"react-icons": "^4.3.1",
+		"react-router-dom": "^6.2.2"
 	},
 	"devDependencies": {
 		"@types/react": "^17.0.33",
